--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:58:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateAllProduct</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:59:14</td>   <td>15406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateAudioCablesCategory</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:01:11</td>   <td>132780</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateCalendarPage</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:59:52</td>   <td>53937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateCartPage</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:01:54</td>   <td>175984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateComparePage()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateComparePage</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:55:20</td>   <td>-218392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateFavoriteIcon</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:59:59</td>   <td>60515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLinks()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateFooterLinks</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:57:14</td>   <td>-104219</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateFooterLogo</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:57:48</td>   <td>-70266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateHeaderLogo</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:54:55</td>   <td>-243485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateLogin</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:57:19</td>   <td>-99376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateMyProfNavigation</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:01:07</td>   <td>128436</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidatePAEmail</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:56:14</td>   <td>-163907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDP()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidatePDP</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:00:56</td>   <td>117343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidatePurchaseAnalysisPage</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:56:41</td>   <td>-136875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateRecentViewLink</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:59:34</td>   <td>35905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateResources</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:01:31</td>   <td>152672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateSavedReports</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:55:52</td>   <td>-185813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateSearching</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:59:45</td>   <td>47174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateSpecialOffer</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:58:02</td>   <td>-55891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateStandardsCatalog</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 16:58:14</td>   <td>-44110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateStandardsCatalogDetail</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:00:10</td>   <td>71609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateTrackpage</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:00:40</td>   <td>101608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">ValidateordersPage</td> 
-  <td>main@407493402</td>   <td></td> </tr>
-<tr bgcolor="9b8ea6">  <td>18/04/30 17:02:32</td>   <td>214031</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@62e70ea3]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@407493402</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateAllProduct</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateAudioCablesCategory</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCalendarPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCartPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4293</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateComparePage()[pri:30, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateComparePage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:11</td>   <td>-5546</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFavoriteIcon</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLinks()[pri:21, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFooterLinks</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>-317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFooterLogo</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>-271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateHeaderLogo</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:11:58</td>   <td>-78052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateLogin</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>-281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateMyProfNavigation</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePAEmail</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:11</td>   <td>-5373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDP()[pri:5, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePDP</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePurchaseAnalysisPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>-346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateRecentViewLink</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateResources</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSavedReports</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:11</td>   <td>-5380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSearching</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSpecialOffer</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateStandardsCatalog</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:16</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateStandardsCatalogDetail</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateTrackpage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4082</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateordersPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/05/08 11:13:20</td>   <td>4299</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@6af93788]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1327536153</td>   <td></td> </tr>
 </table>
