--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,52 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="838989">  <td>18/05/08 15:38:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateLogin</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:08:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateLogin</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:41:10</td>   <td>180815</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFavoriteIcon</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:08:20</td>   <td>19013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFavoriteIcon</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:41:42</td>   <td>212135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSearching</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:08:53</td>   <td>52377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSearching</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:42:04</td>   <td>234043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDP()[pri:5, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePDP</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:09:15</td>   <td>73502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDPandAddToCart()[pri:5, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePDPandAddToCart</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:43:12</td>   <td>302025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateRecentViewLink</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:09:44</td>   <td>102484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateRecentViewLink</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:43:39</td>   <td>329247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLogo</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:10:08</td>   <td>126825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLogo</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:43:43</td>   <td>333295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateMyProfNavigation</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:10:11</td>   <td>129961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateMyProfNavigation</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:44:03</td>   <td>353789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateHeaderLogo</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:10:35</td>   <td>153909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateHeaderLogo</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:44:17</td>   <td>367070</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalog</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:10:45</td>   <td>164268</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalog</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:44:23</td>   <td>373558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalogDetail</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:10:56</td>   <td>174502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalogDetail</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:45:00</td>   <td>410461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAllProduct</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:11:16</td>   <td>195367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAllProduct</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:45:11</td>   <td>421072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAudioCablesCategory</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:11:29</td>   <td>207784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAudioCablesCategory</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:45:30</td>   <td>440838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateResources</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:11:48</td>   <td>227290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateResources</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:45:58</td>   <td>468678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSpecialOffer</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:11:59</td>   <td>237716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSpecialOffer</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:45:59</td>   <td>469284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCartPage</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:12:13</td>   <td>252463</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCartPage</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:46:05</td>   <td>475398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLinks()[pri:21, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLinks</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:12:19</td>   <td>258399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCheckoutProcess()[pri:18, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCheckoutProcess</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:46:28</td>   <td>498671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateTrackpage</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:12:51</td>   <td>290212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLinks()[pri:21, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLinks</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:46:49</td>   <td>519138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateordersPage</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:14:15</td>   <td>374340</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateTrackpage</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:46:59</td>   <td>529799</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePurchaseAnalysisPage</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:14:36</td>   <td>394856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateordersPage</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:47:10</td>   <td>540246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePAEmail</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:14:56</td>   <td>415296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePurchaseAnalysisPage</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:47:13</td>   <td>543717</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCalendarPage</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:15:12</td>   <td>430743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePAEmail</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:47:30</td>   <td>560145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSavedReports</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:15:15</td>   <td>433519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCalendarPage</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:47:45</td>   <td>575628</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateComparePage()[pri:30, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateComparePage</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:15:38</td>   <td>456977</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSavedReports</td> 
   <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/08 15:48:09</td>   <td>599170</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">&lt;&lt;closebrowser</td> 
+<tr bgcolor="838989">  <td>18/05/18 06:15:58</td>   <td>477386</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">&lt;&lt;closebrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254344205</td>   <td></td> </tr>
 </table>
