--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -15,11 +15,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateordersPage</td>
+<td>ValidateSearching</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateSearching</td>
+<td>ValidateordersPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -32,10 +32,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>ValidateSpecialOffer</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>ValidatePDP</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -75,6 +71,10 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>ValidatePDPandAddToCart</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
 <td>ValidateStandardsCatalogDetail</td>
 <td>&nbsp;</td></tr>
 <tr>
@@ -95,19 +95,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateCalendarPage</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>ValidateSavedReports</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ValidateCheckoutProcess</td>
+<td>ValidateCalendarPage</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>ValidateRecentViewLink</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>ValidateCheckoutProcess</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
