--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -2,7 +2,7 @@
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateAddTofavorites</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateAddToCart</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateCheckoutFooterLogo</td></tr>
-<tr><td>smokeTestIE.ValidateSmokeTest.ValidateCheckoutProcess</td></tr>
+<tr><td>smokeTestIE.ValidateSmokeTest.ValidateComparePage</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateRemoveFromCart</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateCalendarLinks</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateAllReportsLinks</td></tr>
