--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -5,6 +5,7 @@
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateComparePage</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateRemoveFromCart</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateCalendarLinks</td></tr>
+<tr><td>smokeTestIE.ValidateSmokeTest.ValidateFooterLinks</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateAllReportsLinks</td></tr>
 <tr><td>smokeTestIE.ValidateSmokeTest.ValidateCheckoutHeaderLogo</td></tr>
 </table>
