--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1051402017\testng-customsuite.xml</span>
+                    <span>C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1559973185\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">23 methods,   23 passed</span>
+                    <span class="method-stats">22 methods,   22 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -128,11 +128,6 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTestIE.ValidateSmokeTest" hash-for-method="ValidateFavoriteIcon">ValidateFavoriteIcon</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="smokeTestIE.ValidateSmokeTest" hash-for-method="ValidateFooterLinks">ValidateFooterLinks</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -277,13 +272,6 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="ValidateFooterLinks">
-                  </a> <!-- ValidateFooterLinks -->
-                  <span class="method-name">ValidateFooterLinks</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="ValidateFooterLogo">
                   </a> <!-- ValidateFooterLogo -->
                   <span class="method-name">ValidateFooterLogo</span>
@@ -399,7 +387,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1051402017\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\bilaw\AppData\Local\Temp\testng-eclipse--1559973185\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -448,104 +436,100 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(23);
+data.addRows(22);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ValidateFooterLinks')
+data.setCell(0, 1, 'ValidateCheckoutProcess')
 data.setCell(0, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(0, 3, 84127);
+data.setCell(0, 3, 71359);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ValidateFavoriteIcon')
+data.setCell(1, 1, 'ValidateLogin')
 data.setCell(1, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(1, 3, 33362);
+data.setCell(1, 3, 64175);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'ValidateCheckoutProcess')
+data.setCell(2, 1, 'ValidateFavoriteIcon')
 data.setCell(2, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(2, 3, 31804);
+data.setCell(2, 3, 38390);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'ValidatePDPandAddToCart')
 data.setCell(3, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(3, 3, 28977);
+data.setCell(3, 3, 32535);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'ValidateRecentViewLink')
+data.setCell(4, 1, 'ValidateTrackpage')
 data.setCell(4, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(4, 3, 24339);
+data.setCell(4, 3, 30313);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'ValidateMyProfNavigation')
+data.setCell(5, 1, 'ValidateordersPage')
 data.setCell(5, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(5, 3, 23944);
+data.setCell(5, 3, 27245);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'ValidateCalendarPage')
+data.setCell(6, 1, 'ValidateSavedReports')
 data.setCell(6, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(6, 3, 23458);
+data.setCell(6, 3, 26797);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'ValidateSearching')
+data.setCell(7, 1, 'ValidateRecentViewLink')
 data.setCell(7, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(7, 3, 21119);
+data.setCell(7, 3, 26696);
 data.setCell(8, 0, 8)
-data.setCell(8, 1, 'ValidateStandardsCatalogDetail')
+data.setCell(8, 1, 'ValidateResources')
 data.setCell(8, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(8, 3, 20857);
+data.setCell(8, 3, 26073);
 data.setCell(9, 0, 9)
-data.setCell(9, 1, 'ValidateTrackpage')
+data.setCell(9, 1, 'ValidateMyProfNavigation')
 data.setCell(9, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(9, 3, 20512);
+data.setCell(9, 3, 25703);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'ValidateordersPage')
+data.setCell(10, 1, 'ValidateAudioCablesCategory')
 data.setCell(10, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(10, 3, 20439);
+data.setCell(10, 3, 24206);
 data.setCell(11, 0, 11)
-data.setCell(11, 1, 'ValidateSavedReports')
+data.setCell(11, 1, 'ValidateCalendarPage')
 data.setCell(11, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(11, 3, 20406);
+data.setCell(11, 3, 22669);
 data.setCell(12, 0, 12)
-data.setCell(12, 1, 'ValidateAudioCablesCategory')
+data.setCell(12, 1, 'ValidateStandardsCatalogDetail')
 data.setCell(12, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(12, 3, 19501);
+data.setCell(12, 3, 22156);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'ValidateLogin')
+data.setCell(13, 1, 'ValidateSearching')
 data.setCell(13, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(13, 3, 19005);
+data.setCell(13, 3, 21844);
 data.setCell(14, 0, 14)
 data.setCell(14, 1, 'ValidatePurchaseAnalysisPage')
 data.setCell(14, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(14, 3, 15445);
+data.setCell(14, 3, 20063);
 data.setCell(15, 0, 15)
-data.setCell(15, 1, 'ValidateSpecialOffer')
+data.setCell(15, 1, 'ValidateAllProduct')
 data.setCell(15, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(15, 3, 14744);
+data.setCell(15, 3, 19843);
 data.setCell(16, 0, 16)
-data.setCell(16, 1, 'ValidateAllProduct')
+data.setCell(16, 1, 'ValidateSpecialOffer')
 data.setCell(16, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(16, 3, 12414);
+data.setCell(16, 3, 18531);
 data.setCell(17, 0, 17)
-data.setCell(17, 1, 'ValidateResources')
+data.setCell(17, 1, 'ValidateFooterLogo')
 data.setCell(17, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(17, 3, 10423);
+data.setCell(17, 3, 13641);
 data.setCell(18, 0, 18)
-data.setCell(18, 1, 'ValidateHeaderLogo')
+data.setCell(18, 1, 'ValidateStandardsCatalog')
 data.setCell(18, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(18, 3, 10357);
+data.setCell(18, 3, 11359);
 data.setCell(19, 0, 19)
-data.setCell(19, 1, 'ValidateStandardsCatalog')
+data.setCell(19, 1, 'ValidateHeaderLogo')
 data.setCell(19, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(19, 3, 10233);
+data.setCell(19, 3, 10485);
 data.setCell(20, 0, 20)
 data.setCell(20, 1, 'ValidateCartPage')
 data.setCell(20, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(20, 3, 5933);
+data.setCell(20, 3, 7000);
 data.setCell(21, 0, 21)
-data.setCell(21, 1, 'ValidateFooterLogo')
+data.setCell(21, 1, 'ValidatePAEmail')
 data.setCell(21, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(21, 3, 3135);
-data.setCell(22, 0, 22)
-data.setCell(22, 1, 'ValidatePAEmail')
-data.setCell(22, 2, 'smokeTestIE.ValidateSmokeTest')
-data.setCell(22, 3, 2772);
+data.setCell(21, 3, 3423);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 minutes</span>
+              <span class="suite-total-time">Total running time: 9 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -560,7 +544,7 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">8 ignored methods</span>
+            <span class="header-content">9 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
@@ -577,6 +561,8 @@ return data;
                 <span class="ignored-method-name">ValidateRemoveFromCart</span>
                 <br/>
                 <span class="ignored-method-name">ValidateCalendarLinks</span>
+                <br/>
+                <span class="ignored-method-name">ValidateFooterLinks</span>
                 <br/>
                 <span class="ignored-method-name">ValidateAllReportsLinks</span>
                 <br/>
@@ -599,95 +585,91 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateFavoriteIcon</span>
-                <span class="method-start">19013 ms</span>
+                <span class="method-start">64188 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateSearching</span>
-                <span class="method-start">52377 ms</span>
+                <span class="method-start">102593 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidatePDPandAddToCart</span>
-                <span class="method-start">73502 ms</span>
+                <span class="method-start">124437 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateRecentViewLink</span>
-                <span class="method-start">102484 ms</span>
+                <span class="method-start">156976 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateFooterLogo</span>
-                <span class="method-start">126825 ms</span>
+                <span class="method-start">183672 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateMyProfNavigation</span>
-                <span class="method-start">129961 ms</span>
+                <span class="method-start">197313 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateHeaderLogo</span>
-                <span class="method-start">153909 ms</span>
+                <span class="method-start">223016 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateStandardsCatalog</span>
-                <span class="method-start">164268 ms</span>
+                <span class="method-start">233501 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateStandardsCatalogDetail</span>
-                <span class="method-start">174502 ms</span>
+                <span class="method-start">244860 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateAllProduct</span>
-                <span class="method-start">195367 ms</span>
+                <span class="method-start">267016 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateAudioCablesCategory</span>
-                <span class="method-start">207784 ms</span>
+                <span class="method-start">286859 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateResources</span>
-                <span class="method-start">227290 ms</span>
+                <span class="method-start">311068 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateSpecialOffer</span>
-                <span class="method-start">237716 ms</span>
+                <span class="method-start">337141 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateCartPage</span>
-                <span class="method-start">252463 ms</span>
+                <span class="method-start">355672 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateCheckoutProcess</span>
-                <span class="method-start">258399 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">ValidateFooterLinks</span>
-                <span class="method-start">290212 ms</span>
+                <span class="method-start">362672 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateTrackpage</span>
-                <span class="method-start">374340 ms</span>
+                <span class="method-start">434031 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateordersPage</span>
-                <span class="method-start">394856 ms</span>
+                <span class="method-start">464349 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidatePurchaseAnalysisPage</span>
-                <span class="method-start">415296 ms</span>
+                <span class="method-start">491594 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidatePAEmail</span>
-                <span class="method-start">430743 ms</span>
+                <span class="method-start">511657 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateCalendarPage</span>
-                <span class="method-start">433519 ms</span>
+                <span class="method-start">515081 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ValidateSavedReports</span>
-                <span class="method-start">456978 ms</span>
+                <span class="method-start">537750 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closebrowser</span>
-                <span class="method-start">477384 ms</span>
+                <span class="method-start">564547 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
