--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,50 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="838989">  <td>18/05/28 06:03:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAllProduct</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:03:38</td>   <td>19843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateAudioCablesCategory</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:07:26</td>   <td>248065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCalendarPage</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:04:47</td>   <td>88656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCartPage</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:04:54</td>   <td>95656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCheckoutProcess()[pri:18, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateCheckoutProcess</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 05:59:56</td>   <td>-202828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFavoriteIcon</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:01:55</td>   <td>-83344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateFooterLogo</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:02:34</td>   <td>-44000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateHeaderLogo</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 05:58:51</td>   <td>-267016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateLogin</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:02:09</td>   <td>-69703</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateMyProfNavigation</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:07:23</td>   <td>244641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePAEmail</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:00:56</td>   <td>-142579</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDPandAddToCart()[pri:5, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePDPandAddToCart</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:07:03</td>   <td>224578</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidatePurchaseAnalysisPage</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:01:28</td>   <td>-110040</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateRecentViewLink</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:04:02</td>   <td>44052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateResources</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:07:49</td>   <td>270734</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSavedReports</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:00:34</td>   <td>-164423</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSearching</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:04:28</td>   <td>70125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateSpecialOffer</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:02:45</td>   <td>-33515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalog</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:02:56</td>   <td>-22156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateStandardsCatalogDetail</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:06:05</td>   <td>167015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateTrackpage</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:06:36</td>   <td>197333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">ValidateordersPage</td> 
-  <td>main@1254344205</td>   <td></td> </tr>
-<tr bgcolor="838989">  <td>18/05/28 06:08:16</td>   <td>297531</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@47d90b9e]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1254344205</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:30:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAllProduct()[pri:12, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateAllProduct</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:30:45</td>   <td>14607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateAudioCablesCategory()[pri:13, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateAudioCablesCategory</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:34:18</td>   <td>227334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCalendarPage()[pri:26, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCalendarPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:31:50</td>   <td>78842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCartPage()[pri:16, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCartPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:31:55</td>   <td>84376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateCheckoutProcess()[pri:18, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateCheckoutProcess</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:27:04</td>   <td>-206361</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFavoriteIcon()[pri:1, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFavoriteIcon</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:29:09</td>   <td>-82102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateFooterLogo()[pri:7, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateFooterLogo</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:29:46</td>   <td>-44209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateHeaderLogo()[pri:9, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateHeaderLogo</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:26:34</td>   <td>-236295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateLogin()[pri:0, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateLogin</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:29:21</td>   <td>-69270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateMyProfNavigation()[pri:8, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateMyProfNavigation</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:34:14</td>   <td>223817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePAEmail()[pri:25, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePAEmail</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:28:14</td>   <td>-136837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePDPandAddToCart()[pri:5, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePDPandAddToCart</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:33:55</td>   <td>204104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidatePurchaseAnalysisPage()[pri:24, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidatePurchaseAnalysisPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:28:44</td>   <td>-106237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateRecentViewLink()[pri:6, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateRecentViewLink</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:31:08</td>   <td>37386</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateResources()[pri:14, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateResources</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:34:43</td>   <td>252345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSavedReports()[pri:29, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSavedReports</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:27:52</td>   <td>-159095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSearching()[pri:2, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSearching</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:31:31</td>   <td>60420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateSpecialOffer()[pri:15, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateSpecialOffer</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:29:59</td>   <td>-31228</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalog()[pri:10, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateStandardsCatalog</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:30:10</td>   <td>-20691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateStandardsCatalogDetail()[pri:11, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateStandardsCatalogDetail</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:33:04</td>   <td>153819</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateTrackpage()[pri:22, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateTrackpage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:33:32</td>   <td>181153</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidateSmokeTest.ValidateordersPage()[pri:23, instance:smokeTestIE.ValidateSmokeTest@6af93788]">ValidateordersPage</td> 
+  <td>main@1327536153</td>   <td></td> </tr>
+<tr bgcolor="c4639c">  <td>18/08/07 12:35:12</td>   <td>281608</td> <td>&nbsp;</td><td title="&lt;&lt;ValidateSmokeTest.closebrowser()[pri:0, instance:smokeTestIE.ValidateSmokeTest@6af93788]">&lt;&lt;closebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1327536153</td>   <td></td> </tr>
 </table>
